--- a/경기도미래기술학교/Django/README/02.프로젝트_구성법.md
+++ b/경기도미래기술학교/Django/README/02.프로젝트_구성법.md
@@ -6,7 +6,7 @@
 
 ### 2.1 settings.py
 
-### [📚 **Django Reference | Database Setup**](https://docs.djangoproject.com/en/3.2/intro/tutorial02/#writing-your-first-django-app-part-2)
+#### [📚 **Django Reference | Database Setup**](https://docs.djangoproject.com/en/3.2/intro/tutorial02/#writing-your-first-django-app-part-2)
 
 프로젝트 하위 폴더인 <u>[config - settings.py]</u>
 파일에는 해당 프로젝트의 환경설정을 할 수 있는 여러 옵션을 제공하고 있습니다. 
@@ -73,8 +73,9 @@ DATABASES = {
         'ENGINE': 'django.db.backends.mysql',
         'NAME': 'mydatabase',       # DB명 선언
         'USER': 'mydatabaseuser',  # DB 사용자명 선언
-        'PASSWORD': 'mypassword','HOST': 'myhost', # 또는 배포할 서비스의 주소 선언
-        'PORT': 'myport',                    # 사용할 포트번호 선언
+        'PASSWORD': 'mypassword',
+        'HOST': 'myhost',                # 또는 배포할 서비스의 주소 선언
+        'PORT': 'myport',                 # 사용할 포트번호 선언
     }
 }
 ```
@@ -86,7 +87,8 @@ DATABASES = {
         'ENGINE': 'django.db.backends.oracle',
         'NAME': 'xe',
         'USER': 'mydatabaseuser',
-        'PASSWORD': 'mypassword','HOST': 'myhost',
+        'PASSWORD': 'mypassword',
+        'HOST': 'myhost',
         'PORT': 'myport',
     }
 }
