--- a/경기도미래기술학교/Django/README/02.프로젝트_구성법.md
+++ b/경기도미래기술학교/Django/README/02.프로젝트_구성법.md
@@ -29,7 +29,7 @@ DEBUG = True
 # Application definition
 
 INSTALLED_APPS = [
-    'django_sample',  ### 앞서 생성한 프로젝트의 이름을 선언
+    'django_sample',  # 앞서 생성한 프로젝트의 이름을 선언
     'django.contrib.admin',
     'django.contrib.auth',
     'django.contrib.contenttypes',
@@ -44,7 +44,7 @@ INSTALLED_APPS = [
 TEMPLATES = [
     {
         'BACKEND': 'django.template.backends.django.DjangoTemplates',
-        'DIRS': [ BASE_DIR / 'templates' ],  ### 별도의 templates 폴더를 생성하면 'DIRS' 옵션을 선언
+        'DIRS': [ BASE_DIR / 'templates' ],  # 별도의 templates 폴더를 생성하면 'DIRS' 옵션을 선언
         'APP_DIRS': True,
         'OPTIONS': {
             ...
@@ -71,11 +71,11 @@ DATABASES = {
 DATABASES = {
     'default': {
         'ENGINE': 'django.db.backends.mysql',
-        'NAME': 'mydatabase',       # DB명 선언
+        'NAME': 'mydatabase',  # DB명 선언
         'USER': 'mydatabaseuser',  # DB 사용자명 선언
         'PASSWORD': 'mypassword',
-        'HOST': 'myhost',                # 또는 배포할 서비스의 주소 선언
-        'PORT': 'myport',                 # 사용할 포트번호 선언
+        'HOST': 'myhost',  # 또는 배포할 서비스의 주소 선언
+        'PORT': 'myport',  # 사용할 포트번호 선언
     }
 }
 ```
