--- a/경기도미래기술학교/Django/README/02.프로젝트_구성법.md
+++ b/경기도미래기술학교/Django/README/02.프로젝트_구성법.md
@@ -23,7 +23,7 @@ DEBUG = True
 : Default 값은 `True`이며 개발 시 로그를 남기는 역할을 합니다. 배포 시에는 `DEBUG = False`로 변경하도록 합니다.
 
 * App 등록
-: 생성한 App들을 모두 등록해주는 역할을 합니다. 앞서 [**[1. 설치 및 프로젝트 생성법]**](./README/01.설치_및_프로젝트_생성법.md)에서 생성했던 App을 추가하려면 다음과 같이 코드를 작성하면 됩니다.
+: 생성한 App들을 모두 등록해주는 역할을 합니다. 앞서 [**1. 설치 및 프로젝트 생성법**](./01.설치_및_프로젝트_생성법.md)에서 생성했던 App을 추가하려면 다음과 같이 코드를 작성하면 됩니다.
 
 ```python
 # Application definition
