--- a/경기도미래기술학교/Django/README/03.간단한_App_만들기.md
+++ b/경기도미래기술학교/Django/README/03.간단한_App_만들기.md
@@ -1,12 +1,12 @@
 2021-08-05 | 신규 작성
 
-## 2. 프로젝트 구성법
+## 3. 간단한 App 만들기
 
 ---
 
 ### 2.1 settings.py
 
-#### [📚 **Django Reference | Database Setup**](https://docs.djangoproject.com/en/3.2/intro/tutorial02/#writing-your-first-django-app-part-2)
+### [📚 **Django Reference | Database Setup**](https://docs.djangoproject.com/en/3.2/intro/tutorial02/#writing-your-first-django-app-part-2)
 
 프로젝트 하위 폴더인 <u>[config - settings.py]</u>
 파일에는 해당 프로젝트의 환경설정을 할 수 있는 여러 옵션을 제공하고 있습니다. 
@@ -29,7 +29,7 @@ DEBUG = True
 # Application definition
 
 INSTALLED_APPS = [
-    'django_sample',  # 앞서 생성한 프로젝트의 이름을 선언
+    'django_sample',  ### 앞서 생성한 프로젝트의 이름을 선언
     'django.contrib.admin',
     'django.contrib.auth',
     'django.contrib.contenttypes',
@@ -44,7 +44,7 @@ INSTALLED_APPS = [
 TEMPLATES = [
     {
         'BACKEND': 'django.template.backends.django.DjangoTemplates',
-        'DIRS': [ BASE_DIR / 'templates' ],  # 별도의 templates 폴더를 생성하면 'DIRS' 옵션을 선언
+        'DIRS': [ BASE_DIR / 'templates' ],  ### 별도의 templates 폴더를 생성하면 'DIRS' 옵션을 선언
         'APP_DIRS': True,
         'OPTIONS': {
             ...
@@ -71,11 +71,10 @@ DATABASES = {
 DATABASES = {
     'default': {
         'ENGINE': 'django.db.backends.mysql',
-        'NAME': 'mydatabase',  # DB명 선언
+        'NAME': 'mydatabase',       # DB명 선언
         'USER': 'mydatabaseuser',  # DB 사용자명 선언
-        'PASSWORD': 'mypassword',
-        'HOST': 'myhost',  # 또는 배포할 서비스의 주소 선언
-        'PORT': 'myport',  # 사용할 포트번호 선언
+        'PASSWORD': 'mypassword','HOST': 'myhost', # 또는 배포할 서비스의 주소 선언
+        'PORT': 'myport',                    # 사용할 포트번호 선언
     }
 }
 ```
@@ -87,8 +86,7 @@ DATABASES = {
         'ENGINE': 'django.db.backends.oracle',
         'NAME': 'xe',
         'USER': 'mydatabaseuser',
-        'PASSWORD': 'mypassword',
-        'HOST': 'myhost',
+        'PASSWORD': 'mypassword','HOST': 'myhost',
         'PORT': 'myport',
     }
 }
